--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -93,14 +93,6 @@ msgctxt "#30021"
 msgid "Number of links to check"
 msgstr ""
 
-msgctxt "#30022"
-msgid "YES"
-msgstr ""
-
-msgctxt "#30023"
-msgid "NO"
-msgstr ""
-
 msgctxt "#30043"
 msgid "Force view mode:"
 msgstr ""
@@ -4087,7 +4079,7 @@ msgid "[Trakt] Remove %s from your watchlist"
 msgstr ""
 
 msgctxt "#70344"
-msgid "Add to %s your watchlist"
+msgid "Add to %s your watchlist""
 msgstr ""
 
 msgctxt "#70345"
@@ -4711,7 +4703,7 @@ msgid "Genre: "
 msgstr ""
 
 msgctxt "#70500"
-msgid "Notification([COLOR red][B]Update Kodi to its latest version[/B][/COLOR], [COLOR skyblue]for best info[/COLOR],8000, 'http://i.imgur.com/mHgwcn3.png')"
+msgid "Notification([COLOR red][B]Update Kodi to its latest version[/B][/COLOR], [COLOR skyblue]for best info[/COLOR],8000, "http://i.imgur.com/mHgwcn3.png")"
 msgstr ""
 
 msgctxt "#70501"
@@ -5027,7 +5019,7 @@ msgid "Timeout (maximum waiting time)"
 msgstr ""
 
 msgctxt "#70581"
-msgid "Check for updates when kodi starts"
+msgid "Interval between automatic updates (hours)"
 msgstr ""
 
 msgctxt "#70582"
@@ -5043,7 +5035,7 @@ msgid "Do you want to update Quasar to avoid errors?"
 msgstr ""
 
 msgctxt "#70585"
-msgid "Renumbering"
+msgid "[B]Renumbering[/B] (beta)"
 msgstr ""
 
 msgctxt "#70586"
@@ -5462,11 +5454,11 @@ msgid "Enter the number of the starting season"
 msgstr ""
 
 msgctxt "#70687"
-msgid "Special Episodes"
+msgid "Enter the number of the starting episode"
 msgstr ""
 
 msgctxt "#70688"
-msgid "Are there special episodes in the series \n(Episode 0 Excluded)?"
+msgid "Episode 0 is a special episode, enter the number of this episode (0 to skip it)"
 msgstr ""
 
 msgctxt "#70689"
@@ -5552,15 +5544,3 @@ msgstr ""
 msgctxt "#70711"
 msgid "Ops! There's been a problem during saving your setting"
 msgstr ""
-
-msgctxt "#70712"
-msgid "Enable Automatic Renumbering"
-msgstr ""
-
-msgctxt "#70713"
-msgid "There is not enough information on TVDB for renumbering"
-msgstr ""
-
-msgctxt "#70714"
-msgid "Modify "
-msgstr " "
