--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -93,14 +93,6 @@ msgctxt "#30021"
 msgid "Number of links to check"
 msgstr ""
 
-msgctxt "#30022"
-msgid "YES"
-msgstr ""
-
-msgctxt "#30023"
-msgid "NO"
-msgstr ""
-
 msgctxt "#30043"
 msgid "Force view mode:"
 msgstr ""
@@ -5043,7 +5035,7 @@ msgid "Do you want to update Quasar to avoid errors?"
 msgstr ""
 
 msgctxt "#70585"
-msgid "Renumbering"
+msgid "[B]Renumbering[/B] (beta)"
 msgstr ""
 
 msgctxt "#70586"
@@ -5462,11 +5454,11 @@ msgid "Enter the number of the starting season"
 msgstr ""
 
 msgctxt "#70687"
-msgid "Special Episodes"
+msgid "Enter the number of the starting episode"
 msgstr ""
 
 msgctxt "#70688"
-msgid "Are there special episodes in the series \n(Episode 0 Excluded)?"
+msgid "Episode 0 is a special episode, enter the number of this episode (0 to skip it)"
 msgstr ""
 
 msgctxt "#70689"
@@ -5551,36 +5543,4 @@ msgstr ""
 
 msgctxt "#70711"
 msgid "Ops! There's been a problem during saving your setting"
-msgstr ""
-
-msgctxt "#70712"
-msgid "Enable Automatic Renumbering"
-msgstr ""
-
-msgctxt "#70713"
-msgid "There is not enough information on TVDB for renumbering"
-msgstr ""
-
-msgctxt "#70714"
-msgid "Modify "
-msgstr " "
-
-msgctxt "#70715"
-msgid "Customize Homepage"
-msgstr ""
-
-msgctxt "#70716"
-msgid "Choose menus you wanna in homepage"
-msgstr ""
-
-msgctxt "#70717"
-msgid "Are all the special episodes present?"
-msgstr ""
-
-msgctxt "#70718"
-msgid "Ep. No (Empty for OK) "
-msgstr ""
-
-msgctxt "#70719"
-msgid "I can't automatically find the special episode number, please enter it manually"
 msgstr ""
