--- a/resources/language/Italian/strings.po
+++ b/resources/language/Italian/strings.po
@@ -93,14 +93,6 @@ msgctxt "#30021"
 msgid "Number of links to check"
 msgstr "Numero di link da verificare"
 
-msgctxt "#30022"
-msgid "YES"
-msgstr "SÌ"
-
-msgctxt "#30023"
-msgid "NO"
-msgstr "NO"
-
 msgctxt "#30043"
 msgid "Force view mode:"
 msgstr "Forza modalità di visualizzazione:"
@@ -391,7 +383,7 @@ msgstr "Saghe"
 
 msgctxt "#50001"
 msgid "On Air"
-msgstr "Adesso in Onda"
+msgstr "Adesso in onda"
 
 msgctxt "#50002"
 msgid "Latest News"
@@ -5042,8 +5034,8 @@ msgid "Do you want to update Quasar to avoid errors?"
 msgstr "Vuoi aggiornare Quasar per evitare errori?"
 
 msgctxt "#70585"
-msgid "Renumbering"
-msgstr "Rinumerazione"
+msgid "[B]Renumbering[/B] (beta)"
+msgstr "[B]Rinumerazione[/B] (beta)"
 
 msgctxt "#70586"
 msgid "Set up series number..."
@@ -5160,7 +5152,6 @@ msgstr ""
 "[CR]- Puoi scaricare una lista se ti inviano un codice di tinyupload o un url dove esso è ospitato."
 "[CR]- Se vuoi farlo manualmente, puoi copiare una lista KODvorites-*.json che hai inserito nella cartella userdata dell’addon. E puoi caricare questi json su qualche server e inviare i loro url ai tuoi amici per condividerli."
 "[CR]- Il servizio tinyupload.com è utilizzato per condividere le liste degli addon perché è gratuito, privato e relativamente veloce. I file rimangono salvati per 100 giorni se nessuno li scarica, sono privati perché richiedono un codice per accedervi e il limite di 50MB è sufficiente per le liste."
-
 msgctxt "#70612"
 msgid "Name of the list"
 msgstr "Nome della lista"
@@ -5462,12 +5453,12 @@ msgid "Enter the number of the starting season"
 msgstr "Inserisci il numero della stagione di partenza"
 
 msgctxt "#70687"
-msgid "Special Episodes"
-msgstr "Episodi Speciali"
+msgid "Enter the number of the starting episode"
+msgstr "Inserisci il numero dell'episodio di partenza"
 
 msgctxt "#70688"
-msgid "Are there special episodes in the series \n(Episode 0 Excluded)?"
-msgstr "Sono presenti episodi speciali nella serie \n(Episodio 0 Escluso)?"
+msgid "Episode 0 is a special episode, enter the number of this episode (0 to skip it)"
+msgstr "L'episodio 0 è un episodio speciale, inserisci il numero di questo episodio (0 per saltare)"
 
 msgctxt "#70689"
 msgid "Enable Download"
@@ -5552,35 +5543,3 @@ msgstr "Le nuove impostazioni sono state salvate"
 msgctxt "#70710"
 msgid "Ops! There's been a problem during saving your setting"
 msgstr "Ops! C'è stato un problema durante il salvataggio delle impostazioni"
-
-msgctxt "#70712"
-msgid "Enable Automatic Renumbering"
-msgstr "Abilita Rinumerazione Automatica"
-
-msgctxt "#70713"
-msgid "There is not enough information on TVDB for renumbering"
-msgstr "Non ci sono Abbastanza informazioni su TVDB per la Rinumerazione"
-
-msgctxt "#70714"
-msgid "Modify "
-msgstr "Modifica "
-
-msgctxt "#70715"
-msgid "Customize Homepage"
-msgstr "Personalizza Homepage"
-
-msgctxt "#70716"
-msgid "Choose menus you wanna in homepage"
-msgstr "Seleziona gli elementi che vuoi visualizzare nella homepage"
-
-msgctxt "#70717"
-msgid "Are all the special episodes present?"
-msgstr "Sono presenti tutti gli episodi spaciali?"
-
-msgctxt "#70718"
-msgid "Ep. No (Empty for OK) "
-msgstr "N° Ep. (vuoto per OK) "
-
-msgctxt "#70719"
-msgid "I can't automatically find the special episode number, please enter it manually"
-msgstr "Non riesco a trovare automaticamente il numero dell'episodio speciale, per favore inseriscilo manualmente"
